apps/prod-cicd-demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: prod-cicd-demo
  namespace: prod-demo

spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  selector:
    matchLabels:
      app: prod-cicd-demo

  template:
    metadata:
      labels:
        app: prod-cicd-demo

    spec:
      containers:
      - name: app
        image: 779599553744.dkr.ecr.ap-south-1.amazonaws.com/prod-cicd-demo:e4a10519791c71edce6b4dd2e0b70719937f27dd
        imagePullPolicy: Always

        ports:
        - containerPort: 5000

        readinessProbe:
          httpGet:
            path: /ready
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 20

        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
