apps/prod-cicd-demo/service-canary.yaml
apiVersion: v1
kind: Service

metadata:
  name: prod-cicd-demo-canary
  namespace: prod-demo

spec:
  type: ClusterIP
  selector:
    app: prod-cicd-demo
    version: canary

  ports:
  - port: 80
    targetPort: 5000
