apps/prod-cicd-demo/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: prod-cicd-demo
  namespace: prod-demo

spec:
  type: ClusterIP
  selector:
    app: prod-cicd-demo
    version: green

  ports:
  - port: 80
    targetPort: 5000
