apps/prod-cicd-demo/ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: prod-cicd-demo-canary
  namespace: prod-demo
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"

spec:
  ingressClassName: nginx

  rules:
  - host: prod-demo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prod-cicd-demo-canary
            port:
              number: 80
