apps/prod-cicd-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: prod-cicd-demo
  namespace: prod-demo

spec:
  ingressClassName: nginx

  rules:
  - host: prod-demo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prod-cicd-demo
            port:
              number: 80
